fixed logs list and profile layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -86,6 +86,7 @@
       "title": "Activity Log",
       "showing": "Showing {{count}} of {{total}} logs",
       "filters": "Filters",
+      "resetFilters": "Reset Filters",
       "downloadCSV": "Download CSV",
       "searchPlaceholder": "Search logs...",
       "dateFrom": "From Date",
